app/assets/stylesheets/pdf.css.scss
.header{
  .fl{
    float: left;
  }
  .fr{
    float: right;
  }
}
.show_invoice{
  .invoice_preview{
    float: left;
    width: 100%;
    padding: 0 0 60px 0;
  }
  .inovice_preview_contianer{
    margin: auto;
    width: 100%;
    overflow: hidden;
    border-radius: 4px;
    min-height: 90px;
  }
  .invoice_tag{
    position: absolute;
    margin: -1px 0 0 -1px;
    width: 90px;
    height: 90px;
    *margin: -1px 0 0 -839px;
  }

  .invoice_preview_content{
    width: 100%;
    padding: 0px 29px 0 29px;
  }
  .preview_content_top{
    padding-bottom: 11px;
  }
  .preview_top{
    padding-bottom: 25px !important;
    float: left;
  }
  .preview_top, .preview_btm{
    width: 95%;
    border-bottom: 1px solid #d7d7d7;
    padding: 0 0 30px 0;
    .preview_top_left{
      float: left;
      width: 60%;
      padding-left: 10px;
      .invoice_date{
        float: left;
        width: 100%;
        padding: 0 0 21px 0;
        h2{
          color: #00BDE5;
          font-size: 18px;
          font-family: "Dosis Medium",sans-serif;;
          text-transform: capitalize;
          span{
            text-transform: capitalize;
            font-size: 18px;
            font-family: "Dosis Regular",sans-serif;
          }
        }
      }
      .invoice_name{
        float: left;
        width: 100%;
        font-weight: bold;
      }
    }
    .preview_top_right, pr{
      float: right;
      width: 40%;
      padding: 5px 0 0 0;
      .company_logo{
        float: right;
        position: relative;
        width: auto;
        padding-right: 10px;
        img{
          padding-bottom: 5px;
        }
      }
      .logo_tagline{
        width: auto;
        float: right;
        padding: 16px 0 0 0;
        text-align: right;
      }
    }
  }
  .preview_btm{
    float: left;
    width: 100%;
    padding: 25px 0 0 0;
    border: none;
    .preview_top_right{
      padding-top: 0px;
      overflow: hidden;
      .top_right_row{
        float: left;
        margin-bottom: -2px;
      }
      .top_right_row:last-child{
        height: auto;
      }
      .preview_right_label{
        float: left;
        width: 82px;
        text-align: left;
        span{
          float: right;
        }
      }
      .preview_right_description{
        float: left;
        width: 152px;
        text-align: right;
      }
    }
  }

  .invoice_address{
    float: left;
    width: 100%;
  }
  .invoice_address p, .invoice_organization p{
    float: left;
    width: 100%;
    line-height: normal;
    padding: 0 0 2px 0;
  }
  .invoice_organization{
    float: left;
    width: 100%;
  }
  .preview_heading{
    font-weight: bold;
  }
  .preview_right{
    float: right;
    width: 256px;
  }

  .preview_content_middle{
    width: 97%;
    padding: 0 0 25px 0;
  }

  .preview_content_btm{
    float: left;
    width: 100%;
    padding: 25px 0 30px 0;
  }
  .preview_btm_top{
    float: left;
    width: 95%;
  }
  .preview_left.btm{
    padding-left: 0px;
    width: 500px;
  }
  .preview_terms{
    float: left;
    width: 100%;
    padding: 0 0 22px 0;
  }
  .preview_terms p, .preview_notes p{
    float: left;
    width: 100%;
    padding: 0 0 6px 0;
    line-height: normal;
  }
  .preview_notes{
    float: left;
    width: 75%;
  }
  .preview_right.btm{
    padding-top: 0px;
    .preview_right_label{
      float: left;
      width: 100px;
      text-align: left;
    }
    .preview_right_description{
      float: right;
    }
  }
  .top_right_row{
    overflow: hidden;
    padding: 0 10px;
  }
  .top_right_row.border{
    border-bottom: 1px solid #d7d7d7;
    margin-bottom: 5px;
    padding-bottom: 3px;
    overflow: hidden;
  }
  .top_right_row.amt_paid{
    color: #00ace5;
  }
  .preview_btm_footer{
    float: left;
    width: 95%;
    padding: 90px 0 0 0;
  }
  .preview_btm_footer ul{
    float: right;
  }
  .preview_btm_footer ul li{
    float: left;
    display: block;
    padding: 0 0 0 4px;
  }
  .footer_txt{
    font-size: 10px;
    padding: 1px 0 0 0 !important;
  }
  .border-row{
    border-top: 1px solid #D7D7D7;
    padding-top: 3px;
    margin-top: 5px;
    overflow: hidden;
  }
}

.show_estimate{
  .estimate_preview{
    float: left;
    width: 100%;
    padding: 0 0 60px 0;
  }
  .estimate_preview_contianer{
    margin: auto;
    width: 100%;
    border: 1px solid #d7d7d7;
    overflow: hidden;
    border-radius: 4px;
    min-height: 90px;
  }
  .estimate_tag{
    position: absolute;
    margin: -1px 0 0 -1px;
    width: 90px;
    height: 90px;
    *margin: -1px 0 0 -839px;
  }

  .estimate_preview_content{
    width: 95%;
    padding: 65px 29px 0 29px;
  }
  .preview_content_top{
    padding-bottom: 11px;
  }
  .preview_top{
    padding-bottom: 25px !important;
    float: left;
  }
  .preview_top, .preview_btm{
    width: 95%;
    border-bottom: 1px solid #d7d7d7;
    padding: 0 0 30px 0;
    .preview_top_left{
      float: left;
      width: 60%;
      padding-left: 10px;
      .estimate_date{
        float: left;
        width: 100%;
        padding: 0 0 21px 0;
        h2{
          color: #00BDE5;
          font-size: 18px;
          font-family: "Dosis Medium",sans-serif;;
          text-transform: capitalize;
          span{
            text-transform: capitalize;
            font-size: 18px;
            font-family: "Dosis Regular",sans-serif;
          }
        }
      }
      .estimate_name{
        float: left;
        width: 100%;
        font-weight: bold;
      }
    }
    .preview_top_right, pr{
      float: right;
      width: 40%;
      padding: 5px 0 0 0;
      .company_logo{
        float: right;
        position: relative;
        width: auto;
        padding-right: 10px;
        img{
          padding-bottom: 5px;
        }
      }
      .logo_tagline{
        width: auto;
        float: right;
        padding: 16px 0 0 0;
        text-align: right;
      }
    }
  }
  .preview_btm{
    float: left;
    width: 100%;
    padding: 25px 0 0 0;
    border: none;
    .preview_top_right{
      padding-top: 0px;
      overflow: hidden;
      .top_right_row{
        float: left;
        margin-bottom: -2px;
      }
      .top_right_row:last-child{
        height: auto;
      }
      .preview_right_label{
        float: left;
        width: 82px;
        text-align: left;
        span{
          float: right;
        }
      }
      .preview_right_description{
        float: left;
        width: 152px;
        text-align: right;
      }
    }
  }

  .estimate_address{
    float: left;
    width: 100%;
  }
  .estimate_address p, .estimate_organization p{
    float: left;
    width: 100%;
    line-height: normal;
    padding: 0 0 2px 0;
  }
  .estimate_organization{
    float: left;
    width: 100%;
  }
  .preview_heading{
    font-weight: bold;
  }
  .preview_right{
    float: right;
    width: 256px;
  }

  .preview_content_middle{
    width: 97%;
    padding: 0 0 25px 0;
  }

  .preview_content_btm{
    float: left;
    width: 100%;
    padding: 25px 0 30px 0;
  }
  .preview_btm_top{
    float: left;
    width: 95%;
  }
  .preview_left.btm{
    padding-left: 0px;
    width: 500px;
  }
  .preview_terms{
    float: left;
    width: 100%;
    padding: 0 0 22px 0;
  }
  .preview_terms p, .preview_notes p{
    float: left;
    width: 100%;
    padding: 0 0 6px 0;
    line-height: normal;
  }
  .preview_notes{
    float: left;
    width: 75%;
  }
  .preview_right.btm{
    padding-top: 0px;
    .preview_right_label{
      float: left;
      width: 100px;
      text-align: left;
    }
    .preview_right_description{
      float: right;
    }
  }
  .top_right_row{
    overflow: hidden;
    padding: 0 10px;
  }
  .top_right_row.border{
    border-bottom: 1px solid #d7d7d7;
    margin-bottom: 5px;
    padding-bottom: 3px;
    overflow: hidden;
  }
  .top_right_row.amt_paid{
    color: #00ace5;
  }
  .preview_btm_footer{
    float: left;
    width: 95%;
    padding: 90px 0 0 0;
  }
  .preview_btm_footer ul{
    float: right;
  }
  .preview_btm_footer ul li{
    float: left;
    display: block;
    padding: 0 0 0 4px;
  }
  .footer_txt{
    font-size: 10px;
    padding: 1px 0 0 0 !important;
  }
  .border-row{
    border-top: 1px solid #D7D7D7;
    padding-top: 3px;
    margin-top: 5px;
    overflow: hidden;
  }
}

